<resources>
    <string name="app_name">WOW</string>
    <string name="action_settings">Settings</string>
    <string name="edu1">2016 – 2017 Hong Kong Baptist University, Master of Science in Information Technology Management with 3.66 CGA</string>
    <string name="edu2">2012 – 2015  The Hong Kong University Of Science And Technology, Bachelor of Science in Mathematics(Statistics Option)</string>
    <string name="work">Heng Shang  Electronic Commerce Co., Ltd.                                          June 2015 – July 2016
–Founder --duties in financial planning, marketing, trading and others.</string>
    <string name="speech1">It simply goes through the basic concepts such as Recyclier view(with Card view),Firebase operation ,JSON &amp; Volley, SQLite, WebView, Fragment, Page Adapter, Notification and etc.</string>
    <string name="speech2">Although it is not a big work, I still put much effort into it. It is placed in github with source code and occasionally updated.</string>
</resources>
