<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#c5c6c5">

    <TextView
        android:text="INFO OF CREATOR "
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="Name: Poon Kam Lung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"/>
    <TextView
        android:text="Education: "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"/>
    <TextView
        android:text="@string/edu1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/edu2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"/>
    <TextView
        android:text="Working Experience: "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"/>
    <TextView
        android:text="@string/work"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="Skills: "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" />


    <TextView
        android:text="Programming (Android, HTML, PHP, CSS, JavaScript , JAVA, MYSQL, C)"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView

        android:text="This app has six main activities with one UI main page."
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"/>

    <TextView
        android:text="@string/speech1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"/>
    <TextView
        android:text="@string/speech2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"/>

    <TextView
        android:text="Hope you like it. Enjoy! See You Again!"
        android:textStyle="bold"
        android:textColor="@android:color/primary_text_dark"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="20sp"/>




</LinearLayout>